# super

./: .gitignore  .goreleaser.yaml  .linkspector.yml  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  code_of_conduct.md  complex.go  complex_test.go  context.go  context_test.go  go.mod  go.sum  mapper.go  package.json  primitive.go  recordbuilder.go  spq_test.go  type.go  typevectortable.go  value.go  value_test.go  walk.go  zed_test.go
api/: api.go  auth.go  mime.go
book/: .gitignore  Makefile  README.md  book.toml  package.json
bsupbytes/: deserializer.go  serializer.go
cli/: cli.go
compiler/: compiler.go  file.go  job.go  lake.go  package.go  reader.go
csup/: array.go  bytes.go  context.go  csup_test.go  dict.go  dynamic.go  encoder.go  field.go  float.go  header.go  int.go  map.go  metadata.go  nulls.go  object.go  object_test.go  primitive.go  record.go  scode.go  segment.go  union.go  writer.go  zcode.go
db/: branch.go  pool.go  root.go  writer.go
dbid/: head.go  id.go  id_test.go
docs/: README.md  _index.md  install.md
fuzz/: fuzz.go
lake/: aggregate-func.yaml  aggregate-ts.yaml  branch.go  pool.go  root.go  writer.go
lakeparse/: head.go  id.go
mdtest/: heavy_test.go  mdtest.go  mdtest_test.go  test.go
order/: direction.go  nulls.go  sortkey.go  which.go
performance/: README.md
python/superdb/: README.md  pyproject.toml  superdb.py
runtime/: compiler.go  context.go
sbuf/: array.go  array_test.go  batch.go  control.go  file.go  mux.go  scanner.go
scode/: builder.go  builder_test.go  bytes.go  counted.go  (+2 more)
(+2875 files in other folders)
