[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "superdb"
dynamic = ["version"]
dependencies = ["durationpy", "python-dateutil", "requests"]
requires-python = ">=3.3"

[tool.setuptools_scm]
fallback_version = "0+unknown"
root = "../.."
version_scheme = "post-release"
